fix clipping bug with add song

--- a/src/assets/styles/cmps/SongWidget.css
+++ b/src/assets/styles/cmps/SongWidget.css
@@ -1,8 +1,9 @@
 .add-button {
   width: 16px;
-  height: 32px;
+  height: 16px;
   padding: 8px 0;
   margin: 0;
+  padding: 0;
   background: black;
   will-change: transform;
 }
@@ -10,8 +11,17 @@
   background: black;
 }
 .add-button svg:hover {
-  transition: fill .22s ease;
+  transition: fill 0.22s ease;
   fill: white;
+}
+.add-button.active {
+  color: #1ed760;
+}
+.add-button.active svg {
+  fill: #1ed760;
+}
+.add-button.active svg:hover {
+  fill: currentColor;
 }
 
 .song-controls-container {
@@ -35,7 +45,7 @@
 .widget-song-header {
   font-size: 0.875rem;
   padding-right: 8px;
-  font-weight: 400
+  font-weight: 400;
 }
 
 .widget-song-artist {
